--- a/technicalDocumentationPage/index.html
+++ b/technicalDocumentationPage/index.html
@@ -18,10 +18,46 @@
                     <li>List Item 1</li>
                 </ul>
             </section>
-            <section id="section-2" class="main-section"></section>
-            <section id="section-3" class="main-section"></section>
-            <section id="section-4" class="main-section"></section>
-            <section id="section-5" class="main-section"></section>
+            <section id="section-2" class="main-section">
+                <header>
+                    Section 2
+                </header>
+                <p>Some content for this section</p>
+                <code>Code example 2</code>
+                <ul>
+                    <li>List Item 2</li>
+                </ul>
+            </section>
+            <section id="section-3" class="main-section">
+                <header>
+                    Section 3
+                </header>
+                <p>Some content for this section</p>
+                <code>Code example 3</code>
+                <ul>
+                    <li>List Item 3</li>
+                </ul>
+            </section>
+            <section id="section-4" class="main-section">
+                <header>
+                    Section 4
+                </header>
+                <p>Some content for this section</p>
+                <code>Code example 4</code>
+                <ul>
+                    <li>List Item 4</li>
+                </ul>
+            </section>
+            <section id="section-5" class="main-section">
+                <header>
+                    Section 5
+                </header>
+                <p>Some content for this section</p>
+                <code>Code example 5</code>
+                <ul>
+                    <li>List Item 5</li>
+                </ul>
+            </section>
         </main>
         
     </body>
