almost final version (this is only a mockup without content or media)

--- a/technicalDocumentationPage/index.html
+++ b/technicalDocumentationPage/index.html
@@ -13,51 +13,64 @@
                     Section 1
                 </header>
                 <p>Some content for this section</p>
+                <p>Additional content for this section</p>
                 <code>Code example 1</code>
                 <ul>
                     <li>List Item 1</li>
                 </ul>
             </section>
-            <section id="section-2" class="main-section">
+            <section id="section_2" class="main-section">
                 <header>
                     Section 2
                 </header>
                 <p>Some content for this section</p>
+                <p>Additional content for this section</p>
                 <code>Code example 2</code>
                 <ul>
                     <li>List Item 2</li>
                 </ul>
             </section>
-            <section id="section-3" class="main-section">
+            <section id="section_3" class="main-section">
                 <header>
                     Section 3
                 </header>
                 <p>Some content for this section</p>
+                <p>Additional content for this section</p>
                 <code>Code example 3</code>
                 <ul>
                     <li>List Item 3</li>
                 </ul>
             </section>
-            <section id="section-4" class="main-section">
+            <section id="section_4" class="main-section">
                 <header>
                     Section 4
                 </header>
                 <p>Some content for this section</p>
+                <p>Additional content for this section</p>
                 <code>Code example 4</code>
                 <ul>
                     <li>List Item 4</li>
                 </ul>
             </section>
-            <section id="section-5" class="main-section">
+            <section id="section_5" class="main-section">
                 <header>
                     Section 5
                 </header>
                 <p>Some content for this section</p>
+                <p>Additional content for this section</p>
                 <code>Code example 5</code>
                 <ul>
                     <li>List Item 5</li>
                 </ul>
             </section>
+            <nav id = "navbar">
+                <header>Table of Contents</header>
+                    <a href="#section_1" class ="nav-link">Section 1</a>
+                    <a href="#section_2" class ="nav-link">Section 2</a>
+                    <a href="#section_3" class ="nav-link">Section 3</a>
+                    <a href="#section_4" class ="nav-link">Section 4</a>
+                    <a href="#section_5" class ="nav-link">Section 5</a>
+                 </nav>
         </main>
         
     </body>
