--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -7,29 +7,42 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header id="header">
+    <header>
         <img src="logo.png" alt="logo image" id ="header-img">
-        <nav id="navbar"> 
+        <nav id="nav-bar"> 
             <h1>
                 <a href="#about" class="nav-link">About</a>
+                <a href="#product" class="nav-link">Product</a>
                 <a href="#services" class="nav-link">Services</a>
                 <a href="#contact" class="nav-link">Contact</a>
             </h1>
         </nav>
     </header>
     <main>
-        <section class="about">
-            <h2>About Us</h2>
-            <p>This is a brief description about us.</p>
-        </section>
-        <section class="services">
-            <h2>Services</h2>
-            <p>Details about the services we offer.</p>
-        </section>
-        <section class="contact">
-            <h2>Contact</h2>
-            <p>How to get in touch with us.</p>
-        </section>
+        <div id="flex-container">
+            <section id="about">
+                <h2>About Us</h2>
+                <p>This is a brief description about us.</p>
+            </section>
+            <section id="product">
+                <h2>Product</h2>
+                <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <p>Details about the product we offer.</p>
+            </section>
+            <section id="services">
+                <h2>Services</h2>
+                <p>Details about the services we offer.</p>
+            </section>
+            <section id="contact">
+                <h2>Contact</h2>
+                <p>How to get in touch with us.</p>
+                <form action="https://www.freecodecamp.com/email-submit" id="form">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required placeholder="Enter your email">
+                    <input type="submit" id="submit">Submit</button>
+                </form>
+            </section>
+        </div>
     </main>
     <footer>
         <p>&copy; 2023 My Landing Page. All rights reserved.</p>
