finished project with all the user stories

--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
+    <header id="header">
         <img src="logo.png" alt="logo image" id ="header-img">
         <nav id="nav-bar"> 
             <h1>
